cabal-version:      3.0
name:               tetris-haskell
version:            0.1.1.1
-- synopsis:
-- description:
license:            GPL-3.0-only
license-file:       LICENSE
author:             Gabriel-Emannuel
maintainer:         gabriel.emannuel.gama.andrade@gmail.com
-- copyright:
category:           Game
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

executable tetris-haskell
    import:           warnings
    main-is:          Main.hs
    other-modules:    Controls, Pieces, State, Game, Components, Util
    -- other-extensions:
    build-depends:    base ^>=4.17.2.1, gloss
    hs-source-dirs:   app
    default-language: Haskell2010